--- a/optimizedFiles/contacts.html
+++ b/optimizedFiles/contacts.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/uikit.min.css" />
     <script src="js/uikit.min.js"></script>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <title> Contacts </title>
 
 <style>
     .logo {
@@ -39,7 +40,7 @@
         <a href="./index.html" >
         <img src="./images/logo.png" class="logo"/>
         </a>
-        <p >Coil aneurysm treatment</p>
+        <h2 class="company-name">Coil aneurysm treatment</h2>
     </div>
     <div class="uk-navbar-right" style="margin-right: 150px">
 
@@ -87,7 +88,7 @@
 
                 <div class="uk-card uk-card-default uk-card-body">
                     <img src="./images/logo.png" /> </br>
-                    <p class="uk-text-center"> Coil aneurysm treatment </p>
+                    <h2 class="company-name" class="uk-text-center"> Coil aneurysm treatment </h2>
                 </div>
 
                 <ul >
@@ -124,7 +125,7 @@
     </a>
 </nav>
 <div class="mobile-company-name uk-text-center uk-hidden@m">
-    <p class="uk-text-center"> Coil aneurysm treatment</p>
+    <h2 class="company-name" class="uk-text-center"> Coil aneurysm treatment</h2>
 </div>
 </nav>
 
@@ -132,7 +133,7 @@
 
 
 <div class="uk-card uk-card-default uk-card-body uk-width-1-2@m uk-text-center uk-align-center">
-    <p> Contacts </p>
+    <h3 class="uk-card-title"> Contacts </h3>
     <p>
         Address: Brivibas iela 55 - 21, </br>
         Riga, LV-1011 </br>
