--- a/optimizedFiles/index.html
+++ b/optimizedFiles/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Coil aneurysm treatment</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/uikit.min.css" />
@@ -74,7 +75,7 @@
     <div class="uk-navbar-left">
         <!--<img class="uk-navbar-item" src="./images/logo.png" id="logo"/>-->
         <img src="./images/logo.png" class="logo"/>
-        <p>Coil aneurysm treatment</p>
+        <h2 class="company-name">Coil aneurysm treatment</h2>
     </div>
 
     <div class="uk-navbar-right" style="margin-right: 150px">
@@ -122,7 +123,7 @@
 
                 <div class="uk-card uk-card-default uk-card-body">
                     <img src="./images/logo.png"/> </br>
-                    <p class="uk-text-center"> Coil aneurysm treatment</p>
+                    <h2 class="company-name" class="uk-text-center"> Coil aneurysm treatment</h2>
                 </div>
 
                 <ul >
@@ -159,7 +160,7 @@
     <img class="uk-hidden@m" src="./images/logo.png" id="logo-mobile"/>
 </nav>
 <div class="mobile-company-name uk-text-center uk-hidden@m">
-<p class="uk-text-center"> Coil aneurysm treatment</p>
+<h2 class="company-name" class="uk-text-center"> Coil aneurysm treatment</h2>
 </div>
 
 
@@ -172,14 +173,14 @@
 
 <div class="centered uk-visible@m quote">
 
-    <p class="myQuotes image-text uk-visible@m" id="firstQuote">
+    <h1 class="myQuotes image-text uk-visible@m" id="firstQuote">
         We represent innovative technological solutions in invasive neuroradiology.
 
-    </p>
-    <p class="myQuotes image-text">
+    </h1>
+    <h1 class="myQuotes image-text">
         The availability of modern cutting edge technology and its quality significantly improves the
         ability for our partners – the doctors and specialists to treat their patients the best they can.
-    </p>
+    </h1>
 </div>
 
 
@@ -187,7 +188,7 @@
 
 
 <div class="uk-card uk-card-default uk-card-body uk-width-1-2@m uk-text-center uk-align-center">
-    <p> What is endovascular coiling? </p>
+    <h3 class="uk-card-title"> What is endovascular coiling? </h3>
         <img src="./images/coil.jpg" style="width:50%">
     <p>
         Endovascular coiling is a procedure performed to block blood flow into an aneurysm (a weakened area in the wall of an artery).
@@ -199,7 +200,7 @@
 
         During endovascular coiling, a catheter is passed through the groin up into
         the artery containing the aneurysm. Platinum coils are then released. The coils induce clotting (embolization) of the aneurysm and, in this way, prevent blood from getting into it.</p> </br>
-    <p> How is endovascular coiling performed? </p>
+    <h3 class="uk-card-title"> How is endovascular coiling performed? </h3>
     <p>
         A microcatheter is inserted through the initial catheter. The coil is attached to the microcatheter. When the microcatheter has reached the aneurysm and has been inserted into the aneurysm, an electrical current is used to separate the coil from the catheter.
     The coil seals off the opening of the aneurysm. The coil is left in place permanently in the aneurysm.
@@ -213,7 +214,7 @@
     vessel to reach the area of the aneurysm. The physician uses fluoroscopy to guide the catheter to the aneurysm's location in the brain.
     </p>
 
-    <p> How do I get ready for an endovascular coiling?</p>
+    <h3 class="uk-card-title"> How do I get ready for an endovascular coiling?</h3>
     <ul>
         <li>
             Your healthcare provider will tell you about the procedure and offer
