--- a/optimizedFiles/nextSteps.html
+++ b/optimizedFiles/nextSteps.html
@@ -7,29 +7,30 @@
     <link rel="stylesheet" href="css/uikit.min.css" />
     <script src="js/uikit.min.js"></script>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <title> Next steps </title>
 
-<style>
-    .logo {
-        width: 100px;
-        margin-left: 20px;
-    }
+    <style>
+        .logo {
+            width: 100px;
+            margin-left: 20px;
+        }
 
-    .mobile-company-name {
-        background-color: #f6f6f6;
-        margin-top: -22px;
-        height:100%;
-    }
-    .company-name {
-        color: MidnightBlue;
-    }
-    #logo-mobile {
-        margin-left: 50px;
-        width: 100px;
-    }
-    li {
-        list-style: none;
-    }
-</style>
+        .mobile-company-name {
+            background-color: #f6f6f6;
+            margin-top: -22px;
+            height:100%;
+        }
+        .company-name {
+            color: MidnightBlue;
+        }
+        #logo-mobile {
+            margin-left: 50px;
+            width: 100px;
+        }
+        /*li {*/
+            /*list-style: none;*/
+        /*}*/
+    </style>
 </head>
 <body>
 
@@ -37,9 +38,9 @@
 <nav class="uk-navbar-container uk-margin uk-visible@m" uk-navbar>
     <div class="uk-navbar-left">
         <a href="./index.html" >
-        <img src="./images/logo.png" class="logo"/>
+            <img src="./images/logo.png" class="logo"/>
         </a>
-        <p >Coil aneurysm treatment</p>
+        <h2 class="company-name">Coil aneurysm treatment</h2>
     </div>
     <div class="uk-navbar-right" style="margin-right: 150px">
 
@@ -57,13 +58,13 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="./contacts.html">
                     <span class="uk-margin-small-right" uk-icon="icon: star"></span>
                     Contacts
                 </a>
             </li>
             <li>
-                <a href="./nextSteps.html">
+                <a href="#">
                     Next steps
                 </a>
             </li>
@@ -87,33 +88,32 @@
 
                 <div class="uk-card uk-card-default uk-card-body">
                     <img src="./images/logo.png" /> </br>
-                    <p class="uk-text-center"> Coil aneurysm treatment </p>
+                    <h2 class="company-name" class="uk-text-center"> Coil aneurysm treatment </h2>
                 </div>
 
                 <ul >
                     <li>
                         <a href="./us.html">
                             <!--<span class="uk-margin-small-right"></span>-->
-                           - About us
+                            - About us
                         </a>
                     </li>
                     <li>
                         <a href="./products.html">
                             <!--<span class="uk-margin-small-right"></span>-->
-                           - Products
+                            - Products
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./contacts.html">
+                            - Contacts
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                           - Contacts
+                           - Next steps
                         </a>
                     </li>
-                    <li>
-                        <a href="./nextSteps.html">
-                            - Next steps
-                        </a>
-                    </li>
-
                 </ul>
 
             </div>
@@ -124,7 +124,7 @@
     </a>
 </nav>
 <div class="mobile-company-name uk-text-center uk-hidden@m">
-    <p class="uk-text-center"> Coil aneurysm treatment</p>
+    <h2 class="company-name" class="uk-text-center"> Coil aneurysm treatment</h2>
 </div>
 </nav>
 
@@ -132,18 +132,49 @@
 
 
 <div class="uk-card uk-card-default uk-card-body uk-width-1-2@m uk-text-center uk-align-center">
-    <p> Contacts </p>
+    <h3 class="uk-card-title"> Next steps </h3>
     <p>
-        Address: Brivibas iela 55 - 21, </br>
-        Riga, LV-1011 </br>
-        Email: edvardskrumins@gmail.com </br>
-        Phone number: +371 29486675</p> </br>
-    </br>
-
-        Address: Matīsa iela 91 - 2, </br>
-        Riga, LV-1001 </br>
-        Email: justskikuts@gmail.com </br>
-        Phone number: +371 28735226</p> </br>
+        Before you agree to the test or the procedure make sure you know:</p>
+    <ul>
+        <li>
+            The name of the test or procedure
+        </li>
+        <li>
+            The reason you are having the test or procedure
+        </li>
+        <li>
+            What results to expect and what they mean
+        </li>
+        <li>
+            The risks and benefits of the test or procedure
+        </li>
+        <li>
+            What the possible side effects or complications are
+        </li>
+        <li>
+            When and where you are to have the test or procedure
+        </li>
+        <li>
+            Who will do the test or procedure and what that person&rsquo;s qualifications
+            are
+        </li>
+        <li>
+            What would happen if you did not have the test or procedure
+        </li>
+        <li>
+            Any alternative tests or procedures to think about
+        </li>
+        <li>
+            When and how will you get the results
+        </li>
+        <li>
+            Who to call after the test or procedure if you have questions or
+            problems
+        </li>
+        <li>
+            How much will you have to pay for the test or procedure
+        </li>
+    </ul>
 
 </div>
 </body>
