--- a/optimizedFiles/us.html
+++ b/optimizedFiles/us.html
@@ -8,10 +8,9 @@
     <script src="js/uikit.min.js"></script>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
+    <title>About us</title>
     <style>
-        .images {
-            width: 220px;
-        }
+
 
         .logo {
             width: 100px;
@@ -40,30 +39,28 @@
 <!--Navbar for desktop-->
 <nav class="uk-navbar-container uk-margin uk-visible@m" uk-navbar>
     <div class="uk-navbar-left">
+        <!--<img class="uk-navbar-item" src="./images/logo.png" id="logo"/>-->
         <a href="./index.html" >
-
         <img src="./images/logo.png" class="logo"/>
         </a>
-        <p class="company-name">Coil aneurysm treatment</p>
+        <h2 class="company-name">Coil aneurysm treatment</h2>
     </div>
+
     <div class="uk-navbar-right" style="margin-right: 150px">
 
         <ul class="uk-navbar-nav">
             <li>
                 <a href="./us.html">
-                    <span class="uk-margin-small-right" uk-icon="icon: star"></span>
                     About us
                 </a>
             </li>
             <li>
-                <a href="#">
-                    <span class="uk-margin-small-right" uk-icon="icon: star"></span>
+                <a href="./products.html">
                     Products
                 </a>
             </li>
             <li>
                 <a href="./contacts.html">
-                    <span class="uk-margin-small-right" uk-icon="icon: star"></span>
                     Contacts
                 </a>
             </li>
@@ -74,7 +71,9 @@
             </li>
         </ul>
     </div>
+
 </nav>
+
 
 
 <!--Navbar for mobile-->
@@ -89,19 +88,21 @@
 
                 <button class="uk-offcanvas-close" type="button" uk-close></button>
 
+
                 <div class="uk-card uk-card-default uk-card-body">
-                    <img class="images" src="./images/logo.png" /> </br>
-                    <p class="company-name" class="uk-text-center"> Coil aneurysm treatment</p>
+                    <img src="./images/logo.png"/> </br>
+                    <h2 class="company-name" class="uk-text-center"> Coil aneurysm treatment</h2>
                 </div>
+
                 <ul >
                     <li>
-                        <a href="./us.html">
+                        <a href="#">
                             <!--<span class="uk-margin-small-right"></span>-->
                            - About us
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./products.html">
                             <!--<span class="uk-margin-small-right"></span>-->
                            - Products
                         </a>
@@ -117,6 +118,7 @@
                         </a>
                     </li>
                 </ul>
+
             </div>
         </div>
         <!--<a class="uk-navbar-toggle" href="#">-->
@@ -124,39 +126,38 @@
         <!--</a>-->
     </div>
     <a href="./index.html">
-    <img class="uk-hidden@m" id="logo-mobile" src="./images/logo.png"/>
+    <img class="uk-hidden@m" src="./images/logo.png" id="logo-mobile"/>
     </a>
 </nav>
 <div class="mobile-company-name uk-text-center uk-hidden@m">
-    <p class="uk-text-center"> Coil aneurysm treatment</p>
+    <h2 class="company-name" class="uk-text-center"> Coil aneurysm treatment</h2>
 </div>
+<div class="uk-card uk-card-default uk-card-body uk-width-1-2@m uk-text-center uk-align-center">
+    <h1 class="uk-text-center">About us</h1>
+    <p>
+        Implementing cutting edge technology in healthcare over the last decades has opened up new
+        possibilities for early detection of intracranial aneurysm as well as there have appeared new
+        minimally invasive treatment methods. Previously the only existing treatment for intracranial
+        aneurysm was neurosurgical operation. However, recently endovascular embolization of cerebral
+        aneurysm has become more widely used and nowadays is believed to have become the “golden
+        standard”. AO Solutions was founded in 2014 with the goal of offering professionals in the
+        Baltic states the most advanced technological solutions in neuroradiology. Also in 2014 AO
+        Solutions signed a contract with a medical technology company from the USA – Blockade
+        Medical LLC, whose manufactured products like embolization coils have been recognized by
+        experts all around the world. In 2016 Blockade Medical was consolidated by Balt International.
+    </p>
+    <p>
 
-<div class="uk-container">
-
-    <p class="uk-text-center uk-margin-large-bottom">Products</p>
-
-    <!--<div uk-grid>-->
-    <!--<div><img class="images" src="./images/blockade.png" /></div>-->
-    <!--<div><img class="images" src="./images/perflow.jpg" /></div>-->
-<!--</div>-->
-    <div class="uk-child-width-expand@s uk-text-center" uk-grid>
-        <div>
-            <div class="uk-card uk-card-default uk-card-body">
-                <img class="images" src="./images/blockade.png" /> </br>
-                <a href="./pdf/Brochure%20Blockade.pdf" target="_blank">Blockade&trade;</a>
-            </div>
-
-        </div>
-
-        <div>
-            <div class="uk-card uk-card-default uk-card-body">
-                <img class="images" src="./images/perflow.jpg" /> </br>
-                <a href="./pdf/CASCADE%20BROCHURE_LB0015%20Rev02_web.pdf" target="_blank">Cascade&trade; Brochure</a> </br>
-                <a href="./pdf/STREAM_BROCHURE_LB0012%20Rev02_web.pdf" target="_blank">Stream&trade; Brochure</a>
-            </div>
-
-        </div>
-    </div>
+        Stroke is a sudden disabling interruption of the blood flow to the brain caused by thrombosis or
+        torn blood vessels and results in an irreparable damage to the brain tissue. Every year
+        approximately 15 million patients die due to the severe effects of a stroke. Moreover, in Latvia
+        the statistics are quite alarming as well. Often experiencing a stroke is associated with older
+        patients even though around 15% of all patients diagnosed with a stroke turn out to be below the
+        age of 45. Mechanical thrombectomy for acute ischemic stroke patients is a meticulous
+        procedure during which recanalization methods and various different kinds of devices are used.
+        The treatment is applied in cases of acute ischemic stroke, using mechanical devices which can
+        significantly reduce the harmful effects of a stroke. This procedure is carried out by highly
+    </p>
 
 </div>
 </body>
