--- a/us.html
+++ b/us.html
@@ -43,7 +43,7 @@
         <a href="./index.html" >
         <img src="./images/logo.png" class="logo"/>
         </a>
-        <h2 class="company-name">AO SOLUTIONS</h2>
+        <p class="company-name">Coil aneurysm treatment</p>
     </div>
 
     <div class="uk-navbar-right" style="margin-right: 150px">
@@ -62,6 +62,11 @@
             <li>
                 <a href="./contacts.html">
                     Contacts
+                </a>
+            </li>
+            <li>
+                <a href="./nextSteps.html">
+                    Next steps
                 </a>
             </li>
         </ul>
@@ -86,7 +91,7 @@
 
                 <div class="uk-card uk-card-default uk-card-body">
                     <img src="./images/logo.png"/> </br>
-                    <h2 class="company-name" class="uk-text-center"> AO SOLUTIONS</h2>
+                    <p class="company-name" class="uk-text-center"> Coil aneurysm treatment</p>
                 </div>
 
                 <ul >
@@ -107,6 +112,11 @@
                            - Contacts
                         </a>
                     </li>
+                    <li>
+                        <a href="./nextSteps.html">
+                           - Next steps
+                        </a>
+                    </li>
                 </ul>
 
             </div>
@@ -120,10 +130,10 @@
     </a>
 </nav>
 <div class="mobile-company-name uk-text-center uk-hidden@m">
-    <h2 class="company-name" class="uk-text-center"> AO SOLUTIONS</h2>
+    <p class="uk-text-center"> Coil aneurysm treatment</p>
 </div>
 <div class="uk-card uk-card-default uk-card-body uk-width-1-2@m uk-text-center uk-align-center">
-    <h1 class="uk-text-center">About us</h1>
+    <p class="uk-text-center">About us</p>
     <p>
         Implementing cutting edge technology in healthcare over the last decades has opened up new
         possibilities for early detection of intracranial aneurysm as well as there have appeared new
