--- a/optimizedFiles/products.html
+++ b/optimizedFiles/products.html
@@ -8,28 +8,33 @@
     <script src="js/uikit.min.js"></script>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-<style>
-    .logo {
-        width: 100px;
-        margin-left: 20px;
-    }
+    <title>Products</title>
+    <style>
+        .images {
+            width: 220px;
+        }
 
-    .mobile-company-name {
-        background-color: #f6f6f6;
-        margin-top: -22px;
-        height:100%;
-    }
-    .company-name {
-        color: MidnightBlue;
-    }
-    #logo-mobile {
-        margin-left: 50px;
-        width: 100px;
-    }
-    li {
-        list-style: none;
-    }
-</style>
+        .logo {
+            width: 100px;
+            margin-left: 20px;
+        }
+
+        .mobile-company-name {
+            background-color: #f6f6f6;
+            margin-top: -22px;
+            height:100%;
+        }
+        .company-name {
+            color: MidnightBlue;
+        }
+        #logo-mobile {
+            margin-left: 50px;
+            width: 100px;
+        }
+        li {
+            list-style: none;
+        }
+    </style>
 </head>
 <body>
 
@@ -37,9 +42,10 @@
 <nav class="uk-navbar-container uk-margin uk-visible@m" uk-navbar>
     <div class="uk-navbar-left">
         <a href="./index.html" >
+
         <img src="./images/logo.png" class="logo"/>
         </a>
-        <p >Coil aneurysm treatment</p>
+        <h2 class="company-name">Coil aneurysm treatment</h2>
     </div>
     <div class="uk-navbar-right" style="margin-right: 150px">
 
@@ -51,13 +57,13 @@
                 </a>
             </li>
             <li>
-                <a href="./products.html">
+                <a href="#">
                     <span class="uk-margin-small-right" uk-icon="icon: star"></span>
                     Products
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="./contacts.html">
                     <span class="uk-margin-small-right" uk-icon="icon: star"></span>
                     Contacts
                 </a>
@@ -84,12 +90,10 @@
 
                 <button class="uk-offcanvas-close" type="button" uk-close></button>
 
-
                 <div class="uk-card uk-card-default uk-card-body">
-                    <img src="./images/logo.png" /> </br>
-                    <p class="uk-text-center"> Coil aneurysm treatment </p>
+                    <img class="images" src="./images/logo.png" /> </br>
+                    <h2 class="company-name" class="uk-text-center"> Coil aneurysm treatment</h2>
                 </div>
-
                 <ul >
                     <li>
                         <a href="./us.html">
@@ -98,52 +102,62 @@
                         </a>
                     </li>
                     <li>
-                        <a href="./products.html">
+                        <a href="#">
                             <!--<span class="uk-margin-small-right"></span>-->
                            - Products
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./contacts.html">
                            - Contacts
                         </a>
                     </li>
                     <li>
                         <a href="./nextSteps.html">
-                            - Next steps
+                           - Next steps
                         </a>
                     </li>
-
                 </ul>
-
             </div>
         </div>
+        <!--<a class="uk-navbar-toggle" href="#">-->
+        <!--<span uk-navbar-toggle-icon></span> <span class="uk-margin-small-left">Menu</span>-->
+        <!--</a>-->
     </div>
     <a href="./index.html">
-        <img class="uk-hidden@m" id="logo-mobile" src="./images/logo.png" />
+    <img class="uk-hidden@m" id="logo-mobile" src="./images/logo.png"/>
     </a>
 </nav>
 <div class="mobile-company-name uk-text-center uk-hidden@m">
-    <p class="uk-text-center"> Coil aneurysm treatment</p>
+    <h2 class="company-name" class="uk-text-center"> Coil aneurysm treatment</h2>
 </div>
-</nav>
 
+<div class="uk-container">
 
+    <h1 class="uk-text-center uk-margin-large-bottom">Products</h1>
 
+    <!--<div uk-grid>-->
+    <!--<div><img class="images" src="./images/blockade.png" /></div>-->
+    <!--<div><img class="images" src="./images/perflow.jpg" /></div>-->
+<!--</div>-->
+    <div class="uk-child-width-expand@s uk-text-center" uk-grid>
+        <div>
+            <div class="uk-card uk-card-default uk-card-body">
+                <img class="images" src="./images/blockade.png" /> </br>
+                <a href="./pdf/Brochure%20Blockade.pdf" target="_blank">Blockade&trade;</a>
+            </div>
 
-<div class="uk-card uk-card-default uk-card-body uk-width-1-2@m uk-text-center uk-align-center">
-    <p> Contacts </p>
-    <p>
-        Address: Brivibas iela 55 - 21, </br>
-        Riga, LV-1011 </br>
-        Email: edvardskrumins@gmail.com </br>
-        Phone number: +371 29486675</p> </br>
-    </br>
+        </div>
 
-        Address: Matīsa iela 91 - 2, </br>
-        Riga, LV-1001 </br>
-        Email: justskikuts@gmail.com </br>
-        Phone number: +371 28735226</p> </br>
+        <div>
+            <div class="uk-card uk-card-default uk-card-body">
+                <img class="images" src="./images/perflow.jpg" /> </br>
+                <a href="./pdf/CASCADE%20BROCHURE_LB0015%20Rev02_web.pdf" target="_blank">Cascade&trade; Brochure</a> </br>
+                <a href="./pdf/STREAM_BROCHURE_LB0012%20Rev02_web.pdf" target="_blank">Stream&trade; Brochure</a>
+            </div>
+
+        </div>
+    </div>
 
 </div>
 </body>
