add alt for images

--- a/optimizedFiles/contacts.html
+++ b/optimizedFiles/contacts.html
@@ -145,6 +145,12 @@
         Riga, LV-1001 </br>
         Email: justskikuts@gmail.com </br>
         Phone number: +371 28735226</p> </br>
+    </br>
+    <p>
+        Address: Dzirnavu iela 23 - 6A, </br>
+        Riga, LV-1010 </br>
+        Email: edgarsbelevics@gmail.com </br>
+        Phone number: +371 22736726</p> </br>
 
 </div>
 </body>
