--- a/optimizedFiles/index.html
+++ b/optimizedFiles/index.html
@@ -189,7 +189,7 @@
 
 <div class="uk-card uk-card-default uk-card-body uk-width-1-2@m uk-text-center uk-align-center">
     <h3 class="uk-card-title"> What is endovascular coiling? </h3>
-        <img src="./images/coil.jpg" style="width:50%">
+        <img src="./images/coil.jpg" alt="Aneurysm embolized by a coil" style="width:50%">
     <p>
         Endovascular coiling is a procedure performed to block blood flow into an aneurysm (a weakened area in the wall of an artery).
         Endovascular coiling is a more recent treatment for brain aneurysms; it has been used in patients since 1991.
